--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,75 +1,69 @@
 # .github/workflows/ci.yml
-
 # SpikeLink Continuous Integration
-
 # Runs tests on push and pull requests
 
 name: CI
 
 on:
-push:
-branches: [main, develop]
-pull_request:
-branches: [main]
+  push:
+    branches: [main, develop]
+  pull_request:
+    branches: [main]
 
 jobs:
-test:
-runs-on: ubuntu-latest
-strategy:
-fail-fast: false
-matrix:
-python-version: [“3.9”, “3.10”, “3.11”, “3.12”]
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
-'''
-steps:
-  - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-  - name: Set up Python ${{ matrix.python-version }}
-    uses: actions/setup-python@v5
-    with:
-      python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      pip install -e ".[full,dev]"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[full,dev]"
 
-  - name: Run linting
-    run: |
-      ruff check src/
-      black --check src/ tests/
+      - name: Run linting
+        run: |
+          ruff check src/
+          black --check src/ tests/
 
-  - name: Run type checking
-    run: mypy src/spikelink/
+      - name: Run type checking
+        run: mypy src/spikelink/
 
-  - name: Run tests
-    run: pytest tests/ --cov=spikelink --cov-report=xml --cov-report=term-missing
+      - name: Run tests
+        run: pytest tests/ --cov=spikelink --cov-report=xml --cov-report=term-missing
 
-  - name: Upload coverage to Codecov
-    if: matrix.python-version == '3.11'
-    uses: codecov/codecov-action@v4
-    with:
-      files: ./coverage.xml
-      fail_ci_if_error: false
-'''
+      - name: Upload coverage to Codecov
+        if: matrix.python-version == '3.11'
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
 
-docs:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-'''
-  - name: Set up Python
-    uses: actions/setup-python@v5
-    with:
-      python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-  - name: Install dependencies
-    run: |
-      pip install -e ".[full,dev]"
-      pip install sphinx sphinx-rtd-theme
+      - name: Install dependencies
+        run: |
+          pip install -e ".[full,dev]"
+          pip install sphinx sphinx-rtd-theme
 
-  - name: Build docs
-    run: |
-      cd docs && make html || echo "Docs build skipped"
-'''
+      - name: Build docs
+        run: |
+          cd docs && make html || echo "Docs build skipped"
