--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 license = "Apache-2.0"
 requires-python = ">=3.9"
 authors = [
-    { name = "Lightborne Intelligence", email = "dev@lightborneintelligence.com" }
+    { name = "Jesus Carrasco", email = "dev@lightborneintelligence.com" },
+    { name = "Lightborne Intelligence" }
 ]
 keywords = [
     "neuromorphic",
@@ -20,9 +21,12 @@ keywords = [
     "protocol",
     "ebrains",
     "spiking-neural-networks",
+    "spike-train",
+    "neo",
+    "elephant",
 ]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
@@ -33,6 +37,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Bio-Informatics",
     "Topic :: System :: Networking",
 ]
 
@@ -69,11 +74,8 @@ dev = [
 [project.urls]
 Homepage = "https://lightborneintelligence.com"
 Documentation = "https://spikelink.readthedocs.io"
-Repository = "https://github.com/LightborneIntelligence/spikelink"
-Issues = "https://github.com/LightborneIntelligence/spikelink/issues"
-
-[project.scripts]
-spikelink = "spikelink.cli:main"
+Repository = "https://github.com/lightborneintelligence/spikelink"
+Issues = "https://github.com/lightborneintelligence/spikelink/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/spikelink"]
