--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,21 @@ authors = [
 ]
 keywords = [
     "neuromorphic",
+    "neuromorphic-computing",
     "spiking",
+    "spiking-neural-networks",
     "neural",
     "spinnaker",
     "brainscales",
     "neo",
     "ebrains",
     "spike-train",
+    "spike-trains",
+    "event-based",
+    "signal-transport",
+    "scientific-computing",
 ]
+
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
