--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 name: CI
-
 on:
   push:
     branches: [main]
@@ -7,54 +6,100 @@ on:
     branches: [main]
 
 jobs:
+  # Core tests - no optional dependencies
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-
       - name: Lint with ruff
         run: ruff check src tests
-
       - name: Format check with black
         run: black --check src tests
-
-      - name: Run tests
-        run: pytest tests/ -v --cov=spikelink --cov-report=xml
-
+      - name: Run core tests
+        run: pytest tests/test_spikelink_v2.py -v --cov=spikelink --cov-report=xml
       - name: Upload coverage
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
 
-  test-with-neo:
+  # Platform: Neo/EBRAINS
+  test-neo:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install with Neo support
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[full,dev]"
+          pip install -e ".[neo,elephant,dev]"
+      - name: Run Neo platform tests
+        run: pytest tests/test_platform_neo.py -v
 
-      - name: Run tests with Neo
-        run: pytest tests/ -v
+  # Platform: Brian2
+  test-brian2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install with Brian2 support
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[brian2,dev]"
+      - name: Run Brian2 platform tests
+        run: pytest tests/test_platform_brian2.py -v
+
+  # Platform: Tonic (DVS/Event cameras)
+  test-tonic:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install with Tonic support
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[tonic,dev]"
+      - name: Run Tonic platform tests
+        run: pytest tests/test_platform_tonic.py -v
+
+  # Full integration - all adapters
+  test-full:
+    runs-on: ubuntu-latest
+    needs: [test, test-neo, test-brian2, test-tonic]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install full package
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[full,dev]"
+      - name: Run all tests
+        run: pytest tests/ -v --cov=spikelink --cov-report=xml
+      - name: Upload coverage
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
