--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-testpaths = tests
-python_files = test_*.py
-norecursedirs = src/spikelink/tests
+markers =
+    platform: tests requiring optional platform deps (neo, brian2, tonic, etc.)
+    slow: longer-running tests
